# ioa

./: Makefile.am  Makefile.in  TODO  config.h.in  configure  configure.ac  index.html  libtool
examples/: Makefile  Makefile.am  Makefile.in  UID.hpp  aba_automaton.hpp  alarm_automaton.cpp  alarm_automaton.hpp  analyze.awk  ast_automaton.hpp  asynch_bcast_ack.cpp  asynch_bcast_ack_automaton.hpp  asynch_bellman_ford.cpp  asynch_bellman_ford_automaton.hpp  asynch_bfs  asynch_bfs.cpp  asynch_bfs_automaton.hpp  asynch_lcr  asynch_lcr.cpp  asynch_lcr_automaton.hpp  asynch_spanning_tree.cpp  asynch_spanning_tree_automaton.hpp  basic_client.cpp  basic_server.cpp  beast  beast.cpp  beast_tree.hpp  bellman_ford  bellman_ford.cpp  bf_automaton.hpp  bfs_automaton.hpp  bidirectional_network.hpp  bidirectional_spanning_tree.hpp  broadcast_receiver.cpp  broadcast_sender.cpp  channel_automaton.hpp  checking_channel_automaton.hpp  clock.cpp  clock_213  clock_213.cpp  conversion_channel_automaton.hpp  (+40 more)
include/: Makefile.am  automan.h  ccm.h  mftp.h  table.h  table.hh  ueioa.h  ueioa.hh
include/ioa/: action.hpp  action_executor.hpp  action_runnable.hpp  action_runnable_interface.hpp  action_wrapper.hpp  aid.hpp  alarm_automaton.hpp  allocator.hpp  allocator_interface.hpp  automaton.hpp  automaton_base.hpp  automaton_handle.hpp  automaton_helper.hpp  automaton_helper_interface.hpp  automaton_interface.hpp  automaton_locker.hpp  automaton_manager.hpp  automaton_manager_interface.hpp  automaton_record.hpp  automaton_set.hpp  bid.hpp  bind_helper.hpp  bind_runnable.hpp  binding.hpp  binding_manager.hpp  binding_set.hpp  blocking_list.hpp  buffer.hpp  condition_variable.hpp  config.hpp.in  const_shared_ptr.hpp  create_runnable.hpp  destroy_runnable.hpp  dispatching_automaton.hpp  (+54 more)
lib/: Makefile.am  Makefile.in  alarm_automaton.cpp  automata.c  automata.h  automaton.cpp  automaton_interface.cpp  automaton_record.cpp  automaton_record.hpp  automaton_set.hpp  bidq.c  bind_runnable.hpp  blocking_list.hpp  buffers.c  buffers.h  condition_variable.cpp  condition_variable.hpp  create_runnable.hpp  descriptor.c  destroy_runnable.hpp  global_fifo_scheduler.cpp  hashtable.c  hashtable.h  input_bound_runnable.hpp  input_unbound_runnable.hpp  ioq.c  ioq.h  lock.cpp  lock.hpp  main.c  manager.c  model.cpp  model.hpp  mutex.cpp  null_mutex.hpp  null_shared_lock.hpp  null_shared_mutex.hpp  null_unique_lock.hpp  observer.cpp  order.c  (+45 more)
mftp/: Makefile.am  Makefile.in  composer.c  composer.h  consumer.c  consumer.cc  consumer.h  ft.h  generator.c  generator.h  get.c  get.cc  main.cc  match.c  match_getter.c  match_getter.cc  match_getter.h  matcher.c  matcher.h  share.c
src/: Makefile.am  Makefile.in  camera.c  channel.c  channel.h  component_manager.c  component_manager.h  composer.c  composer.h  counter.c  counter.h  display.c  display.h  display_driver.c  hashtable.c  hashtable.h  integer_display.c  integer_display.h  integer_display_proxy.c  integer_display_proxy.h  main.c  manager.c  manager.h  message.h  port.c  port.h  port_allocator.c  port_allocator.h  port_manager.c  port_manager.h  ramp.c  ramp.h  ramp_driver.c  ramp_proxy.c  ramp_proxy.h  thread_test.c  trigger.c  trigger.h  video_capture_example.c
test/: Makefile.am  Makefile.in  action.cpp  action_executor.cpp  action_runnable.cpp  automaton1.hpp  automaton2.hpp  automaton_set.cpp  bind_helper.cpp  binding.cpp  binding_manager.cpp  binding_set.cpp  configuration.cpp  global_fifo_scheduler.cpp  instance_holder.hpp  minunit.h  model.cpp  reuse_bind_key.cpp  scheduler_test.cpp  scheduler_test.hpp  simple_scheduler.cpp  system.cpp  test.txt  test_main.cpp  test_system_scheduler.cpp  test_system_scheduler.hpp  time.cpp
testautoman/: Makefile.am  automan_child_create.c  automan_child_create_param.c  automan_compose_in_param.c  automan_compose_out_param.cc  automan_creat.c  automan_creat.cc  automan_create.c  automan_create.cc  automan_create_destroy.cc  automan_declare.c  automan_decompose.cc  automan_destroy.c  automan_destroy.cc  automan_external_destroy.c  automan_input_add.c  automan_input_dne.c  automan_input_unavailable.c  automan_output_add.c  automan_output_unavailable.cc  automan_param_declare.c  automan_proxy_add.c  automan_proxy_add.cc  automan_proxy_destroyed.c  automan_self_destruct.c  automan_self_destruct.cc
testccm/: Makefile.am  component_request_port.c  component_request_port_instance.c  component_request_port_instance_cdc.c  component_request_port_instance_oob.c  component_request_port_instance_unavailable.c  integer_reflector.c  integer_reflector.h  integer_reflector_proxy.c
tests/: Makefile.am  Makefile.in  alarm.c  automaton_dne.c  bad_descriptor.c  bad_order.c  child_created.c  child_destroyed.c  compose_param_input.c  composed.c  declared.c  decomposed.c  input_composed.c  input_decomposed.c  input_dne.c  input_unavailable.c  not_composed.c  not_owner.c  output_composed.c  output_decomposed.c  output_dne.c  output_unavailable.c  read.c  rescinded.c  same_compose.c  schedule_alarm_input.c  schedule_free_input.c  schedule_internal.c  schedule_output.c  schedule_read_input.c  schedule_system_output.c  schedule_write_input.c  self_created.c  send_message.c  test.c  test.h  timer.c  write.c
testueioa/: Makefile.am  Makefile.in  automaton_dne.c  automaton_dne.cc  bad_descriptor.c  bad_descriptor.cc  bad_order.c  bad_order.cc  child_created.c  child_created.cc  child_destroyed.cc  compose_param_input.c  compose_param_input.cc  composed.c  composed.cc  declared.c  declared.cc  decomposed.cc  input_composed.cc  input_decomposed.c  input_decomposed.cc  input_dne.cc  input_unavailable.c  input_unavailable.cc  not_composed.c  not_composed.cc  not_owner.c  not_owner.cc  output_composed.c  output_composed.cc  output_decomposed.cc  output_dne.c  output_dne.cc  output_unavailable.cc  rescinded.c  rescinded.cc  same_compose.cc  schedule_alarm_input.c  schedule_alarm_input.cc  schedule_free_input.cc  (+9 more)
tutorial/: Makefile.am  count_to_ten_automaton.cpp  null_automaton.cpp  producer_consumer.cpp  producer_consumer2.cpp  two_counters.cpp
(+344 files in other folders)
