nobase_include_HEADERS = \
ioa/action.hpp \
ioa/action_executor.hpp \
ioa/action_runnable.hpp \
ioa/action_runnable_interface.hpp \
ioa/action_wrapper.hpp \
ioa/aid.hpp \
ioa/alarm_automaton.hpp \
ioa/automaton.hpp \
ioa/automaton_handle.hpp \
ioa/automaton_manager.hpp \
ioa/automaton_manager_interface.hpp \
ioa/binding_manager.hpp \
ioa/buffer.hpp \
ioa/const_shared_ptr.hpp \
ioa/environment.hpp \
ioa/executor_interface.hpp \
ioa/generator.hpp \
ioa/generator_interface.hpp \
ioa/global_fifo_scheduler.hpp \
ioa/handle_manager.hpp \
ioa/inet_address.hpp \
ioa/ioa.hpp \
ioa/model_interface.hpp \
ioa/mutex.hpp \
ioa/observer.hpp \
ioa/runnable_interface.hpp \
ioa/scheduler.hpp \
ioa/scheduler_interface.hpp \
ioa/shared_mutex.hpp \
ioa/shared_ptr.hpp \
ioa/simple_scheduler.hpp \
ioa/system_scheduler_interface.hpp \
ioa/tcp_acceptor.hpp \
ioa/tcp_connection_automaton.hpp \
ioa/tcp_connector.hpp \
ioa/time.hpp \
ioa/udp_receiver_automaton.hpp \
ioa/udp_sender_automaton.hpp
