nobase_include_HEADERS = \
ioa/action.hpp \
ioa/action_executor.hpp \
ioa/aid.hpp \
ioa/automaton_base.hpp \
ioa/automaton_handle.hpp \
ioa/environment.hpp \
ioa/mutex.hpp \
ioa/scheduler_interface.hpp \
ioa/time.hpp




# ioa/action_runnable.hpp \
# ioa/action_runnable_interface.hpp \
# ioa/action_wrapper.hpp \
# ioa/automaton.hpp \
# ioa/automaton_manager.hpp \
# ioa/automaton_manager_interface.hpp \
# ioa/binding_manager.hpp \
# ioa/generator.hpp \
# ioa/generator_interface.hpp \
# ioa/global_fifo_scheduler.hpp \
# ioa/handle_manager.hpp \
# ioa/inet_address.hpp \
# ioa/ioa.hpp \
# ioa/model_interface.hpp \
# ioa/observer.hpp \
# ioa/runnable_interface.hpp \
# ioa/scheduler.hpp \
# ioa/shared_mutex.hpp \
# ioa/simple_scheduler.hpp \
# ioa/tcp_acceptor_automaton.hpp \
# ioa/tcp_connection_automaton.hpp \
# ioa/tcp_connector_automaton.hpp \
# ioa/udp_receiver_automaton.hpp \
# ioa/udp_sender_automaton.hpp
