AM_CXXFLAGS = -Wall -I$(top_srcdir)/include

lib_LTLIBRARIES = libueioa.la

libueioa_la_SOURCES = \
automaton_interface.cpp \
automaton_record.cpp \
condition_variable.cpp \
lock.cpp \
model.cpp \
mutex.cpp \
observer.cpp \
runnable_interface.cpp \
scheduler.cpp \
shared_lock.cpp \
shared_mutex.cpp \
simple_scheduler.cpp \
thread.cpp \
time.cpp \
unique_lock.cpp

# libueioa_la_LIBADD = $(top_builddir)/libtable/libtable.la
