AM_CXXFLAGS = -Wall -I$(top_srcdir)/include

lib_LTLIBRARIES = libioa.la

libioa_la_SOURCES = \
mutex.cpp \
shared_lock.cpp \
shared_mutex.cpp \
time.cpp \
unique_lock.cpp


# runnable_interface.cpp \
# observer.cpp \
# automaton.cpp \
# scheduler.cpp


# automaton.cpp \
# automaton_record.hpp \
# automaton_record.cpp \
# bind_runnable.hpp \
# blocking_list.hpp \
# condition_variable.hpp \
# condition_variable.cpp \
# create_runnable.hpp \
# destroy_runnable.hpp \
# global_fifo_scheduler.cpp \
# input_bound_runnable.hpp \
# input_unbound_runnable.hpp \
# lock.hpp \
# lock.cpp \
# model.hpp \
# model.cpp \
# observer.cpp \
# output_bound_runnable.hpp \
# output_exec_runnable.hpp \
# output_unbound_runnable.hpp \
# runnable_interface.cpp \
# scheduler.cpp \
# sequential_set.hpp \
# shared_lock.hpp \
# shared_lock.cpp \
# shared_mutex.cpp \
# simple_scheduler.cpp \
# sys_bind_runnable.hpp \
# sys_create_runnable.hpp \
# sys_destroy_runnable.hpp \
# sys_unbind_runnable.hpp \
# tcp_acceptor_automaton.cpp \
# tcp_connection_automaton.cpp \
# tcp_connector_automaton.cpp \
# thread.hpp \
# thread.cpp \
# thread_key.hpp \
# udp_receiver_automaton.cpp \
# udp_sender_automaton.cpp \
# unbind_runnable.hpp