AM_CFLAGS = -Wall -I$(top_srcdir)/include

LDADD = $(top_builddir)/libautoman/libautoman.la

TESTS = \
automan_creat \
automan_create \
automan_declare \
automan_output_dne \
automan_input_dne \
automan_output_unavailable \
automan_input_unavailable \
automan_compose \
automan_compose_out_param \
automan_compose_in_param \
automan_decompose \
automan_rescind \
automan_destroy \
automan_self_destruct \
automan_create_destroy \
automan_input_add \
automan_input_add2 \
automan_output_add \
automan_output_add2 \
automan_external_destroy \
automan_external_decompose \
automan_proxy_add \
automan_proxy_not_created \
automan_proxy_destroyed

check_PROGRAMS = $(TESTS)

automan_creat_SOURCES = automan_creat.c

automan_create_SOURCES = automan_create.c

automan_declare_SOURCES = automan_declare.c

automan_output_dne_SOURCES = automan_output_dne.c

automan_input_dne_SOURCES = automan_input_dne.c

automan_output_unavailable_SOURCES = automan_output_unavailable.c

automan_input_unavailable_SOURCES = automan_input_unavailable.c

automan_compose_SOURCES = automan_compose.c

automan_compose_in_param_SOURCES = automan_compose_in_param.c

automan_compose_out_param_SOURCES = automan_compose_out_param.c

automan_decompose_SOURCES = automan_decompose.c

automan_rescind_SOURCES = automan_rescind.c

automan_destroy_SOURCES = automan_destroy.c

automan_self_destruct_SOURCES = automan_self_destruct.c

automan_create_destroy_SOURCES = automan_create_destroy.c

automan_input_add_SOURCES = automan_input_add.c

automan_input_add2_SOURCES = automan_input_add2.c

automan_output_add_SOURCES = automan_output_add.c

automan_output_add2_SOURCES = automan_output_add2.c

automan_external_destroy_SOURCES = automan_external_destroy.c

automan_external_decompose_SOURCES = automan_external_decompose.c

automan_proxy_add_SOURCES = automan_proxy_add.c

automan_proxy_not_created_SOURCES = automan_proxy_not_created.c

automan_proxy_destroyed_SOURCES = automan_proxy_destroyed.c
