AM_CFLAGS = -Wall -I$(top_srcdir)/include

TESTS = \
schedule_system_output \
bad_order \
self_created \
child_created \
bad_descriptor \
declared \
output_dne \
input_dne \
output_unavailable \
input_unavailable \
composed \
input_composed \
output_composed \
not_composed \
decomposed \
input_decomposed \
output_decomposed \
rescinded \
automaton_dne \
not_owner \
child_destroyed \
schedule_alarm_input \
schedule_read_input \
schedule_write_input \
schedule_free_input \
schedule_output \
schedule_internal \
same_compose \
compose_param_input

check_PROGRAMS = $(TESTS)

schedule_system_output_SOURCES = schedule_system_output.c test.c
schedule_system_output_LDADD = $(top_builddir)/lib/libueioa.la

bad_order_SOURCES = bad_order.c test.c
bad_order_LDADD = $(top_builddir)/lib/libueioa.la

self_created_SOURCES = self_created.c test.c
self_created_LDADD = $(top_builddir)/lib/libueioa.la

child_created_SOURCES = child_created.c test.c
child_created_LDADD = $(top_builddir)/lib/libueioa.la

bad_descriptor_SOURCES = bad_descriptor.c test.c
bad_descriptor_LDADD = $(top_builddir)/lib/libueioa.la

declared_SOURCES = declared.c test.c
declared_LDADD = $(top_builddir)/lib/libueioa.la

output_dne_SOURCES = output_dne.c test.c
output_dne_LDADD = $(top_builddir)/lib/libueioa.la

input_dne_SOURCES = input_dne.c test.c
input_dne_LDADD = $(top_builddir)/lib/libueioa.la

output_unavailable_SOURCES = output_unavailable.c test.c
output_unavailable_LDADD = $(top_builddir)/lib/libueioa.la

input_unavailable_SOURCES = input_unavailable.c test.c
input_unavailable_LDADD = $(top_builddir)/lib/libueioa.la

composed_SOURCES = composed.c test.c
composed_LDADD = $(top_builddir)/lib/libueioa.la

input_composed_SOURCES = input_composed.c test.c
input_composed_LDADD = $(top_builddir)/lib/libueioa.la

output_composed_SOURCES = output_composed.c test.c
output_composed_LDADD = $(top_builddir)/lib/libueioa.la

not_composed_SOURCES = not_composed.c test.c
not_composed_LDADD = $(top_builddir)/lib/libueioa.la

decomposed_SOURCES = decomposed.c test.c
decomposed_LDADD = $(top_builddir)/lib/libueioa.la

input_decomposed_SOURCES = input_decomposed.c test.c
input_decomposed_LDADD = $(top_builddir)/lib/libueioa.la

output_decomposed_SOURCES = output_decomposed.c test.c
output_decomposed_LDADD = $(top_builddir)/lib/libueioa.la

rescinded_SOURCES = rescinded.c test.c
rescinded_LDADD = $(top_builddir)/lib/libueioa.la

automaton_dne_SOURCES = automaton_dne.c test.c
automaton_dne_LDADD = $(top_builddir)/lib/libueioa.la

not_owner_SOURCES = not_owner.c test.c
not_owner_LDADD = $(top_builddir)/lib/libueioa.la

child_destroyed_SOURCES = child_destroyed.c test.c
child_destroyed_LDADD = $(top_builddir)/lib/libueioa.la

schedule_alarm_input_SOURCES = schedule_alarm_input.c test.c
schedule_alarm_input_LDADD = $(top_builddir)/lib/libueioa.la

schedule_read_input_SOURCES = schedule_read_input.c test.c
schedule_read_input_LDADD = $(top_builddir)/lib/libueioa.la

schedule_write_input_SOURCES = schedule_write_input.c test.c
schedule_write_input_LDADD = $(top_builddir)/lib/libueioa.la

schedule_free_input_SOURCES = schedule_free_input.c test.c
schedule_free_input_LDADD = $(top_builddir)/lib/libueioa.la

schedule_output_SOURCES = schedule_output.c test.c
schedule_output_LDADD = $(top_builddir)/lib/libueioa.la

schedule_internal_SOURCES = schedule_internal.c test.c
schedule_internal_LDADD = $(top_builddir)/lib/libueioa.la

same_compose_SOURCES = same_compose.c test.c
same_compose_LDADD = $(top_builddir)/lib/libueioa.la

compose_param_input_SOURCES = compose_param_input.c test.c
compose_param_input_LDADD = $(top_builddir)/lib/libueioa.la
